<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.2</version>
        <!-- lookup parent from repository -->
        <relativePath/>
    </parent>

    <groupId>backend.academy.link-tracker</groupId>
    <artifactId>parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>link-tracker-parent</name>

    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>

    <modules>
        <module>ai-agent</module>
        <module>bot</module>
        <module>build-report-aggregate</module>
        <module>scrapper</module>
    </modules>

    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>

    <properties>
        <revision>0.0.1</revision>

        <java.version>25</java.version>
        <maven.version>3.9.12</maven.version>

        <awaitility.version>4.3.0</awaitility.version>
        <commons-codec.version>1.21.0</commons-codec.version>
        <commons-collections.version>4.5.0</commons-collections.version>
        <commons-compress.version>1.28.0</commons-compress.version>
        <commons-io.version>2.21.0</commons-io.version>
        <commons-lang.version>3.20.0</commons-lang.version>
        <commons-text.version>1.15.0</commons-text.version>
        <datafaker.version>2.5.2</datafaker.version>
        <grpc.version>1.77.1</grpc.version>
        <guava.version>33.5.0-jre</guava.version>
        <instancio.version>5.5.1</instancio.version>
        <java-telegram-bot-api.version>9.3.0</java-telegram-bot-api.version>
        <modernizer.version>3.2.0</modernizer.version>
        <opentelemetry-instrumentation.version>2.24.0</opentelemetry-instrumentation.version>
        <protobuf-java.version>4.33.4</protobuf-java.version>
        <spotbugs.version>4.9.8</spotbugs.version>
        <spring-ai.version>2.0.0-M2</spring-ai.version>
        <spring-cloud.version>2025.1.1</spring-cloud.version>
        <spring-grpc.version>1.0.2</spring-grpc.version>
        <springdoc.version>3.0.1</springdoc.version>
        <wiremock-grpc.version>0.11.0</wiremock-grpc.version>
        <wiremock-spring-boot.version>4.1.0</wiremock-spring-boot.version>

        <flatten-maven-plugin.version>1.7.3</flatten-maven-plugin.version>
        <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
        <maven-pmd-plugin.version>3.28.0</maven-pmd-plugin.version>
        <modernizer-maven-plugin.version>${modernizer.version}</modernizer-maven-plugin.version>
        <openapi-generator-maven-plugin.version>7.19.0</openapi-generator-maven-plugin.version>
        <palantir-java-format.version>2.86.0</palantir-java-format.version>
        <pmd.version>7.21.0</pmd.version>
        <protobuf-maven-plugin.version>4.1.3</protobuf-maven-plugin.version>
        <spotbugs-findsecbugs-plugin.version>1.14.0</spotbugs-findsecbugs-plugin.version>
        <spotbugs-maven-plugin.version>${spotbugs.version}.2</spotbugs-maven-plugin.version>
        <spotbugs-slf4j-plugin.version>1.5.0</spotbugs-slf4j-plugin.version>
        <spotless-maven-plugin.version>3.2.1</spotless-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.grpc</groupId>
                <artifactId>spring-grpc-dependencies</artifactId>
                <version>${spring-grpc.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-bom</artifactId>
                <version>${springdoc.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.opentelemetry.instrumentation</groupId>
                <artifactId>opentelemetry-instrumentation-bom-alpha</artifactId>
                <version>${opentelemetry-instrumentation.version}-alpha</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>${commons-text.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>${commons-compress.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons-codec.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.pengrad</groupId>
                <artifactId>java-telegram-bot-api</artifactId>
                <version>${java-telegram-bot-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wiremock.integrations</groupId>
                <artifactId>wiremock-spring-boot-standalone</artifactId>
                <version>${wiremock-spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wiremock</groupId>
                <artifactId>wiremock-grpc-extension</artifactId>
                <version>${wiremock-grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>net.datafaker</groupId>
                <artifactId>datafaker</artifactId>
                <version>${datafaker.version}</version>
            </dependency>
            <dependency>
                <groupId>org.instancio</groupId>
                <artifactId>instancio-junit</artifactId>
                <version>${instancio.version}</version>
            </dependency>
            <dependency>
                <groupId>org.instancio</groupId>
                <artifactId>instancio-guava</artifactId>
                <version>${instancio.version}</version>
            </dependency>
            <dependency>
                <groupId>org.awaitility</groupId>
                <artifactId>awaitility</artifactId>
                <version>${awaitility.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.gaul</groupId>
            <artifactId>modernizer-maven-annotations</artifactId>
            <version>${modernizer.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-annotations</artifactId>
            <version>${spotbugs.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <configuration>
                        <rules>
                            <requireJavaVersion>
                                <version>[${java.version},)</version>
                                <message>JDK version must be at least ${java.version}</message>
                            </requireJavaVersion>
                            <requireMavenVersion>
                                <version>[${maven.version},)</version>
                                <message>Maven version should, at least, be ${maven.version}</message>
                            </requireMavenVersion>
                            <banDistributionManagement/>
                            <banDuplicatePomDependencyVersions/>
                            <banDynamicVersions/>
                            <dependencyConvergence/>
                            <reactorModuleConvergence/>
                        </rules>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.openapitools</groupId>
                    <artifactId>openapi-generator-maven-plugin</artifactId>
                    <version>${openapi-generator-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>io.github.ascopes</groupId>
                    <artifactId>protobuf-maven-plugin</artifactId>
                    <version>${protobuf-maven-plugin.version}</version>
                    <configuration>
                        <protoc>${protobuf-java.version}</protoc>
                        <binaryMavenPlugins>
                            <binaryMavenPlugin>
                                <groupId>io.grpc</groupId>
                                <artifactId>protoc-gen-grpc-java</artifactId>
                                <version>${grpc.version}</version>
                            </binaryMavenPlugin>
                        </binaryMavenPlugins>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>${spotless-maven-plugin.version}</version>
                    <configuration>
                        <java>
                            <palantirJavaFormat>
                                <version>${palantir-java-format.version}</version>
                                <style>PALANTIR</style>
                            </palantirJavaFormat>
                        </java>
                        <pom>
                            <sortPom>
                                <expandEmptyElements>false</expandEmptyElements>
                                <nrOfIndentSpace>4</nrOfIndentSpace>
                                <predefinedSortOrder>recommended_2008_06</predefinedSortOrder>
                                <sortDependencies>none</sortDependencies>
                                <sortDependencyExclusions>none</sortDependencyExclusions>
                                <sortDependencyManagement>none</sortDependencyManagement>
                                <sortExecutions>false</sortExecutions>
                                <sortModules>true</sortModules>
                                <sortPlugins>none</sortPlugins>
                                <sortProperties>false</sortProperties>
                            </sortPom>
                        </pom>
                        <markdown>
                            <includes>
                                <include>*.md</include>
                            </includes>
                            <flexmark/>
                        </markdown>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.gaul</groupId>
                    <artifactId>modernizer-maven-plugin</artifactId>
                    <version>${modernizer-maven-plugin.version}</version>
                    <configuration>
                        <javaVersion>${java.version}</javaVersion>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-pmd-plugin</artifactId>
                    <version>${maven-pmd-plugin.version}</version>
                    <configuration>
                        <targetJdk>${java.version}</targetJdk>
                        <printFailingErrors>true</printFailingErrors>
                        <linkXRef>false</linkXRef>
                        <outputDirectory>${project.reporting.outputDirectory}/pmd</outputDirectory>
                        <rulesets>
                            <ruleset>pmd.xml</ruleset>
                        </rulesets>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>net.sourceforge.pmd</groupId>
                            <artifactId>pmd-core</artifactId>
                            <version>${pmd.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>net.sourceforge.pmd</groupId>
                            <artifactId>pmd-java</artifactId>
                            <version>${pmd.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>${flatten-maven-plugin.version}</version>
                    <configuration>
                        <updatePomFile>true</updatePomFile>
                        <flattenMode>resolveCiFriendliesOnly</flattenMode>
                        <outputDirectory>${project.build.directory}</outputDirectory>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.github.spotbugs</groupId>
                    <artifactId>spotbugs-maven-plugin</artifactId>
                    <version>${spotbugs-maven-plugin.version}</version>
                    <configuration>
                        <excludeFilterFile>spotbugs-excludes.xml</excludeFilterFile>
                        <effort>Max</effort>
                        <htmlOutput>true</htmlOutput>
                        <xmlOutput>true</xmlOutput>
                        <outputDirectory>${project.reporting.outputDirectory}/spotbugs</outputDirectory>
                        <spotbugsXmlOutputDirectory>${project.reporting.outputDirectory}/spotbugs</spotbugsXmlOutputDirectory>
                        <plugins>
                            <plugin>
                                <groupId>com.h3xstream.findsecbugs</groupId>
                                <artifactId>findsecbugs-plugin</artifactId>
                                <version>${spotbugs-findsecbugs-plugin.version}</version>
                            </plugin>
                            <plugin>
                                <groupId>jp.skypencil.findbugs.slf4j</groupId>
                                <artifactId>bug-pattern</artifactId>
                                <version>${spotbugs-slf4j-plugin.version}</version>
                            </plugin>
                        </plugins>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <compilerArgs>
                            <arg>-Xlint</arg>
                            <arg>-Xlint:-processing</arg>
                        </compilerArgs>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.springframework.boot</groupId>
                                <artifactId>spring-boot-configuration-processor</artifactId>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco-maven-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <phase>validate</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                        <phase>process-resources</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <phase>test-compile</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
